# arc-toolbox

./: .gitignore  README.md  api.py  app.arc  arc.py  fb_admin.py  index.mjs  package-lock.json  package.json  postdeploy.py  pyproject.toml  stack.py  start.sh
.github/workflows/: build.yml  main.yml
backend/: README.md  package.json
backend/public/: manifest.json
backend/src/: App.tsx
src/backend/: index.html  package.json
src/backend/src/: firebase-auth.json  index.tsx  main.jsx
src/backend/src/components/: auth.jsx  firebase.jsx
src/backend/src/layout/: AppLayout.tsx  AppMenu.tsx
src/backend/src/pages/: AdminPage.tsx  CustomLoginPage.jsx  DocsPage.jsx  docs.jsx  home.jsx  login.jsx
src/http/get-auth_config/: lambda.py  requirements.txt
src/http/get-openapi_specs/: config.arc  lambda.py  openapi-specs.json  requirements.txt
src/http/get-p1/: lambda.py
src/http/get-p2/: lambda.py
src/plugins/abc2/: index.js
src/shared/: lib.py
